<resources>
    <string name="app_name">برنامج تسجيل الحضور والغياب</string>
    <string name="login">تسجيل الدخول</string>
    <string name="home">الرئيسية</string>
    <string name="addSubject">إضافة مادة</string>
    <string name="username">اسم المستخدم</string>
    <string name="newUsername">اسم المستخدم الجديد</string>
    <string name="subjectName">اسم المادة</string>
    <string name="password">كلمة المرور</string>
    <string name="newPassword">كلمة المرور الجديدة</string>
    <string name="rememberMe">تذكرني</string>
    <string name="needNewAccount">هل تريد إنشاء حساب؟</string>
    <string name="newAccount">إنشاء حساب</string>
    <string name="email">البريد الالكتروني</string>
    <string name="newEmail"> البريد الالكتروني الجديد</string>
    <string name="editUser">تعديل الحساب</string>
    <string name="passwordLength">كلمة المرور يجب أن تحتوي على 8 أحرف أو أكثر</string>
    <string name="passwordCharacters">كلمة المرور يجب أن تحتوي على أحد الرموز التالية($/%/*/@/#)</string>
    <string name="passwordNumber">كلمة المرور يجب أن تحتوي على أحد رقم واحد على الأقل</string>
    <string name="usernameEmpty">اسم المستخدم لا يمكن أن يترك فارغاَ</string>
    <string name="passwordEmpty">كلمة المرور لا يمكن أن تترك فارغةَ</string>
    <string name="invalidPassword">يرجى مراجعة شروط كلمة المرور في الأسفل</string>
    <string name="emailEmpty">البريد الإلكتروني لا يمكن أن يترك فارغاَ</string>
    <string name="invalidEmail">صيغة ايميل خاطئة يرجى التأكد من الايميل</string>
    <string name="usernameChNumber">اسم المستخدم يجب أن يكون أكبر من 3</string>
    <string name="january">يناير</string>
    <string name="february">فبرابر</string>
    <string name="march">مارس</string>
    <string name="april">ابريل</string>
    <string name="may">مايو</string>
    <string name="june">يونيو</string>
    <string name="july">يوليو</string>
    <string name="august">أغسطس</string>
    <string name="september">سبتمبر</string>
    <string name="october">أكتوبر</string>
    <string name="november">نوفمبر</string>
    <string name="december">ديسمبر</string>
    <string name="addStudent">إضافة طالب</string>
    <string name="showStudents">عرض الطلاب</string>
    <string name="deleteSubject">حذف مادة</string>
    <string name="deleteStudent">حذف طالب</string>
    <string name="deleteSubject_message">هل تريد تأكيد حذف مادة</string>
    <string name="deleteStudent_message">هل تريد تأكيد حذف طالب</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="firstName">الاسم الأول</string>
    <string name="familyName">اسم العائلة</string>
    <string name="dateOfBirth">تاريخ الميلاد</string>
    <string name="allStudents">جميع الطلاب</string>
    <string name="studentsName">أسماء الطلاب</string>
    <string name="registerPresence">تسجيل الحضور</string>
    <string name="month">شهر</string>
    <string name="PresenceIs">اجمالى نسبة حضور الطلاب خلال هذا الشهر هو</string>
    <string name="addPresence">تأكيد الحضور</string>
    <string name="addPresenceMessage">هل تريد تأكيد الحضور للطلاب الذين تم اختيارهم؟</string>
    <string name="studentDetails">تفاصيل الطالب</string>
    <string name="studentAge">العمر</string>
    <string name="studentFullName">الاسم كاملاَ</string>
    <string name="registeredSubjects">المواد المسجلة للطالب</string>
</resources>