<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbg"
    android:contentDescription="@string/addStudent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvAddStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/addStudent"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/etbg"
            android:hint="@string/firstName"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/white"
            android:textDirection="rtl"/>

        <EditText
            android:id="@+id/etFamilyName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/etbg"
            android:hint="@string/familyName"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textDirection="rtl"/>

        <TextView
            android:id="@+id/tvDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/etbg"
            android:hint="@string/dateOfBirth"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textDirection="rtl"
            android:textSize="@dimen/_14ssp"
            app:drawableStartCompat="@drawable/baseline_calendar_month_24"
            app:drawableTint="@color/white" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAddStudent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_220sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:scrollbars="vertical" />


        <Button
            android:id="@+id/btnAddStudent"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/btn_bg"
            android:text="@string/addStudent"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />


    </LinearLayout>


</ScrollView>